fixed alignment issues on addPort page and updated form focus color

--- a/app/styles/_forms.scss
+++ b/app/styles/_forms.scss
@@ -1,3 +1,9 @@
+.remove-left-padding{
+	padding-left: 0px;
+}
+.form-control[disabled]{
+	background-color: transparent;
+}
 .admin-input-title{
 	//font-family: $font-family-fairview;
 	font-size: 40px;
